--- a/McDaC++/BSC/.vscode/settings.json
+++ b/McDaC++/BSC/.vscode/settings.json
@@ -2,6 +2,13 @@
     "files.associations": {
         "cstdint": "cpp",
         "__config": "cpp",
-        "climits": "cpp"
-    }
+        "climits": "cpp",
+        "__bit_reference": "cpp",
+        "atomic": "cpp",
+        "chrono": "cpp",
+        "complex": "cpp",
+        "iterator": "cpp",
+        "string": "cpp"
+    },
+    "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools"
 }
