--- a/McDaC++/BSC/CMakeLists.txt
+++ b/McDaC++/BSC/CMakeLists.txt
@@ -1,15 +1,21 @@
 cmake_minimum_required(VERSION 3.19.5)
 project(BSClib VERSION 0.0.1)
 
+set(TEST_FILE 
+	src/main.cpp)
+
 set(SRC_FILES 
     src/types/BSCoperator.cpp 
-    src/types/BSCconstruct.cpp)
+    src/types/BSCconstruct.cpp
+    src/grid/BSCconstruct.cpp
+    src/grid/BSCoperator.cpp
+    src/grid/BSCfunction.cpp)
 
 set(HDR_FILES 
     include/BSCtypes.hpp 
     include/BSCpch.hpp 
-    include/BSCmath.hpp 
-    include/BSCmultiBool.hpp)
+    include/BSCmath.hpp
+    include/BSCgrid.hpp)
 
 set(TEST_FILE src/main.cpp)
 
@@ -33,12 +39,13 @@ set(CXX_COMPILE_WARNINGS
     -Wformat=2)
 
 set(CXX_COMPILE_SANITIZERS 
-    -fsanitize=address 
     -fsanitize=undefined)
 
 set(CXX_COMPILE_DEBUG 
     -g 
     -D DEBUG)
+
+add_compile_options(${CXX_STANDARD_FLAGS} ${CXX_COMPILE_WARNINGS} ${CXX_COMPILE_SANITIZERS} ${CXX_COMPILE_DEBUG})
 
 add_library(
     BSCstatic
@@ -54,5 +61,4 @@ add_library(
     ${HDR_FILES}
 )
 
-add_compile_options(${CXX_STANDARD_FLAGS} ${CXX_COMPILE_WARNINGS} ${CXX_COMPILE_SANITIZERS} ${CXX_COMPILE_DEBUG})
-add_executable(test ${SRC_FILES})
+add_executable(test ${TEST_FILE} ${SRC_FILES})
