Can now draw a triangle in vulkan

--- a/McDaC++/Learning/Vulkan/.vscode/settings.json
+++ b/McDaC++/Learning/Vulkan/.vscode/settings.json
@@ -82,6 +82,7 @@
 		"memory_resource": "cpp",
 		"filesystem": "cpp",
 		"*.ipp": "cpp",
-		"clocale": "cpp"
+		"clocale": "cpp",
+		"unordered_set": "cpp"
 	}
 }
