--- a/McDaC++/Learning/Vulkan/.vscode/settings.json
+++ b/McDaC++/Learning/Vulkan/.vscode/settings.json
@@ -83,6 +83,16 @@
 		"filesystem": "cpp",
 		"*.ipp": "cpp",
 		"clocale": "cpp",
-		"unordered_set": "cpp"
+		"unordered_set": "cpp",
+		"any": "cpp",
+		"codecvt": "cpp",
+		"concepts": "cpp",
+		"condition_variable": "cpp",
+		"numbers": "cpp",
+		"queue": "cpp",
+		"semaphore": "cpp",
+		"*.tcc": "cpp",
+		"stop_token": "cpp",
+		"cinttypes": "cpp"
 	}
 }
