Can now render a texture in vulkan

--- a/McDaC++/Learning/Vulkan/.vscode/settings.json
+++ b/McDaC++/Learning/Vulkan/.vscode/settings.json
@@ -93,6 +93,7 @@
 		"semaphore": "cpp",
 		"*.tcc": "cpp",
 		"stop_token": "cpp",
-		"cinttypes": "cpp"
+		"cinttypes": "cpp",
+		"cfenv": "cpp"
 	}
 }
