--- a/McDaC++/Learning/Vulkan/CMakeLists.txt
+++ b/McDaC++/Learning/Vulkan/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.20.3)
+cmake_minimum_required(VERSION 3.20.4)
 project(LearnVulkan LANGUAGES CXX)
 
 set(DEBUG_ENABLE ON)
@@ -20,9 +20,13 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 
 set(SOURCE_FILES
     src/main.cpp
-    src/application.cpp)
+    src/application.cpp
+	src/libraries.cpp)
 
 if(DEBUG_ENABLE)
+	set(MACROS
+		_DEBUG)
+
 	set(COMPILE_FLAGS
 		-Og
 		-Wall 
@@ -38,13 +42,18 @@ if(DEBUG_ENABLE)
 		-Wsign-conversion 
 		-Wnull-dereference 
 		-Wdouble-promotion 
-		-Wformat=2)
-
-	set(MACROS
-		DEBUG)
+		-Wformat=2
+		-fsanitize=address
+		-fsanitize=pointer-compare
+		-fsanitize=pointer-subtract
+		-fsanitize=undefined)
+	
+	set(LINKER_FLAGS
+		-fsanitize=address)
 else()
-	set(COMPILE_FLAGS)
 	set(MACROS)
+	set(COMPILE_FLAGS)
+	set(LINKER_FLAGS)
 endif()
 
 find_package(Vulkan REQUIRED)
@@ -52,23 +61,24 @@ find_package(glfw3 3.3.4 REQUIRED)
 
 add_compile_definitions(${MACROS})
 add_compile_options(${COMPILE_FLAGS})
+add_link_options(${LINKER_FLAGS})
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 
 add_custom_command(
 	TARGET ${PROJECT_NAME}
-	DEPENDS ${CMAKE_SOURCE_DIR}/shaders/triangle.vert
+	DEPENDS ${CMAKE_SOURCE_DIR}/assets/shaders/triangle.vert
 
-	COMMENT "[ __%] Compiling Vertex Shader"
-	COMMAND glslc ${CMAKE_SOURCE_DIR}/shaders/triangle.vert -o ${CMAKE_SOURCE_DIR}/bin/vert.spv
+	COMMENT "[100%] Compiling Vertex Shader"
+	COMMAND glslc ${CMAKE_SOURCE_DIR}/assets/shaders/triangle.vert -o ${CMAKE_SOURCE_DIR}/bin/vert.spv
 )
 
 add_custom_command(
 	TARGET ${PROJECT_NAME}
-	DEPENDS ${CMAKE_SOURCE_DIR}/shaders/triangle.frag
+	DEPENDS ${CMAKE_SOURCE_DIR}/assets/shaders/triangle.frag
 
-	COMMENT "[ __%] Compiling Fragment Shader"
-	COMMAND glslc ${CMAKE_SOURCE_DIR}/shaders/triangle.frag -o ${CMAKE_SOURCE_DIR}/bin/frag.spv
+	COMMENT "[100%] Compiling Fragment Shader"
+	COMMAND glslc ${CMAKE_SOURCE_DIR}/assets/shaders/triangle.frag -o ${CMAKE_SOURCE_DIR}/bin/frag.spv
 )
 
 target_include_directories(${PROJECT_NAME} PRIVATE Vulkan::Vulkan)
