--- a/McDaC++/Learning/Vulkan/.vscode/launch.json
+++ b/McDaC++/Learning/Vulkan/.vscode/launch.json
@@ -5,7 +5,7 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
-			"name": "g++ - Build and debug active file",
+			"name": "Build Project",
 			"type": "cppdbg",
 			"request": "launch",
 			"program": "${fileDirname}/${fileBasenameNoExtension}",
@@ -15,7 +15,7 @@
 			"environment": [],
 			"externalConsole": false,
 			"MIMode": "lldb",
-			"preLaunchTask": "C/C++: g++ build active file"
+			"preLaunchTask": "Build"
 		}
 	]
 }
